<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/feeds">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/home" />
            </menu>
        </item>

        <item android:title="@string/nf_news">
            <menu>
                <item
                    android:id="@+id/nav_top_headlines"
                    android:icon="@drawable/ic_top"
                    android:title="@string/top_headlines" />

                <item
                    android:id="@+id/nav_world"
                    android:icon="@drawable/ic_global"
                    android:title="@string/world" />

                <item
                    android:id="@+id/nav_politics"
                    android:icon="@drawable/ic_tribune"
                    android:title="@string/politics" />

                <item
                    android:id="@+id/nav_entertainment"
                    android:icon="@drawable/ic_video"
                    android:title="@string/entertainment" />

                <item
                    android:id="@+id/nav_sports"
                    android:icon="@drawable/ic_sport"
                    android:title="@string/sports" />

                <item
                    android:id="@+id/nav_technology"
                    android:icon="@drawable/ic_computer"
                    android:title="@string/technology" />
            </menu>
        </item>
    </group>
</menu>