<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:outlineSpotShadowColor="@color/light_red"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/news_more_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/news_desc"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:background="@color/white"
            android:contentDescription="@string/more_options"
            android:paddingTop="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="12dp"
            android:src="@drawable/ic_download_arrow" />

        <ProgressBar
            android:id="@+id/imageProgressBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="185dp"
            android:layout_marginTop="110dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/red"
            android:indeterminateTintMode="src_atop" />

        <ImageView
            android:id="@+id/news_image"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_image_24" />

        <TextView
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/news_image"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/rajdhani_bold"
            android:lineSpacingExtra="1.5dp"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="12dp"
            android:paddingBottom="2dp"
            android:text="@string/title"
            android:textAlignment="viewStart"
            android:textColor="@color/title_black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/news_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/news_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/rajdhani_light"
            android:lineSpacingExtra="1.5dp"
            android:paddingStart="20dp"
            android:paddingTop="4dp"
            android:paddingEnd="20dp"
            android:paddingBottom="2dp"
            android:text="@string/description"
            android:textColor="@color/medium_black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/news_desc"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/dot"
            android:src="@drawable/ic_dot" />

        <TextView
            android:id="@+id/news_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/news_desc"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/dot"
            android:drawablePadding="8dp"
            android:fontFamily="@font/rajdhani_medium"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            android:text="@string/published_author"
            android:textAlignment="viewStart"
            android:textColor="#E53935"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/news_desc"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_toEndOf="@id/news_author"
            android:contentDescription="@string/dot"
            android:src="@drawable/ic_clock" />

        <TextView
            android:id="@+id/news_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/news_desc"
            android:layout_toEndOf="@id/clock"
            android:drawablePadding="8dp"
            android:fontFamily="@font/rajdhani_medium"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:text="@string/published_time"
            android:textAlignment="viewStart"
            android:textColor="#FF5252"
            android:textSize="16sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
