<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/progress_bar_red"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/signInText"
        app:layout_constraintTop_toBottomOf="@id/signInText" />

    <TextView
        android:id="@+id/welcomeText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/sign_up_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/welcomeText"
        app:layout_constraintTop_toBottomOf="@id/welcomeText" />

    <EditText
        android:id="@+id/usernameEtSignIn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:drawableTint="@color/progress_bar_red"
        android:fontFamily="@font/quicksand_semi_bold"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:paddingStart="18dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/light_black"
        android:textColorHint="@color/light_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText2" />

    <EditText
        android:id="@+id/emailEtSignIn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:drawableTint="@color/progress_bar_red"
        android:fontFamily="@font/quicksand_semi_bold"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:paddingStart="18dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/light_black"
        android:textColorHint="@color/light_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEtSignIn" />

    <EditText
        android:id="@+id/passwordEtSignIn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:drawableTint="@color/progress_bar_red"
        android:fontFamily="@font/quicksand_semi_bold"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:paddingStart="18dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/light_black"
        android:textColorHint="@color/light_black"
        app:layout_constraintEnd_toEndOf="@id/emailEtSignIn"
        app:layout_constraintStart_toStartOf="@id/emailEtSignIn"
        app:layout_constraintTop_toBottomOf="@id/emailEtSignIn" />

    <EditText
        android:id="@+id/confirmPasswordEtSignIn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_open_lock"
        android:drawablePadding="12dp"
        android:drawableTint="@color/progress_bar_red"
        android:fontFamily="@font/quicksand_semi_bold"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword"
        android:paddingHorizontal="12dp"
        android:paddingStart="18dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/light_black"
        android:textColorHint="@color/light_black"
        app:layout_constraintEnd_toEndOf="@id/emailEtSignIn"
        app:layout_constraintStart_toStartOf="@id/emailEtSignIn"
        app:layout_constraintTop_toBottomOf="@id/passwordEtSignIn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/quicksand_medium"
        android:paddingVertical="16dp"
        android:text="@string/sign_up"
        android:textColor="@color/progress_bar_red"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/emailEtSignIn"
        app:layout_constraintStart_toStartOf="@id/emailEtSignIn"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordEtSignIn"
        app:layout_constraintVertical_bias="0.05"
        app:shapeAppearanceOverlay="@style/EditTextBackground" />

    <TextView
        android:id="@+id/noAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/signUpBtn"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@id/signUpBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alreadyUserBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/quicksand_bold"
        android:padding="0dp"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/noAccountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/noAccountText"
        app:layout_constraintTop_toTopOf="@id/noAccountText" />
</androidx.constraintlayout.widget.ConstraintLayout>
