<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/progress_bar_red"
    tools:context=".PassRecoveryActivity">

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/password_recovery"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEtOtpIn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:drawableTint="@color/progress_bar_red"
        android:fontFamily="@font/quicksand_semi_bold"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:paddingStart="18dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/light_black"
        android:textColorHint="@color/light_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInText" />

    <EditText
        android:id="@+id/otpEtSignIn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_otp"
        android:drawablePadding="12dp"
        android:drawableTint="@color/progress_bar_red"
        android:enabled="false"
        android:fontFamily="@font/quicksand_semi_bold"
        android:hint="@string/otp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingHorizontal="12dp"
        android:paddingStart="18dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/light_black"
        android:textColorHint="@color/light_black"
        app:layout_constraintEnd_toEndOf="@id/emailEtOtpIn"
        app:layout_constraintStart_toStartOf="@id/emailEtOtpIn"
        app:layout_constraintTop_toBottomOf="@id/emailEtOtpIn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/otpGenerateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/quicksand_medium"
        android:paddingVertical="16dp"
        android:text="@string/generate"
        android:textColor="@color/progress_bar_red"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/otpEtSignIn"
        app:layout_constraintStart_toStartOf="@id/otpEtSignIn"
        app:layout_constraintTop_toBottomOf="@id/otpEtSignIn"
        app:layout_constraintVertical_bias="0.05"
        app:shapeAppearanceOverlay="@style/EditTextBackground" />
</androidx.constraintlayout.widget.ConstraintLayout>